# FGO-Account-Data-Organizer

./: .gitignore  README.md  alembic.ini  database.py  main.py  models.py  pyproject.toml
alembic/: env.py
alembic/versions/: c18712017617_start_db.py
routers/: auth.py  home.py  master.py
static/fgo/css/: styles.css
static/fgo/js/: form_validator_script.js  home_script.js  new_master_script.js  script.js
templates/: home.html  layout.html  login.html  navbar.html  new-master.html  register.html
