[tool.poetry]
name = "fgo-account-data-organizer"
version = "0.1.0"
description = ""
authors = ["Vincius"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
python-multipart = "^0.0.5"
alembic = "^1.9.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["criptography"], version = "^3.3.0"}
Jinja2 = "^3.1.2"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
